src/main/kotlin/com/example/ggyunispring/error/member/GoogleIdTokenException.kt
package com.example.ggyunispring.error.member

/**
 * created by Gyunny 2021/10/03
 */
class GoogleIdTokenException() : RuntimeException() {
}